--- a/style.css
+++ b/style.css
@@ -356,4 +356,5 @@ footer p {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    max-width: 500px
+    max-width: 500px;
+    margin: 0 auto
