--- a/style.css
+++ b/style.css
@@ -500,3 +500,13 @@ footer p {
 
 .about p {
     text-align: justify;
+    line-height: 1.8;
+    margin-bottom: 1.5rem;
+    font-size: 1.1rem;
+}
+
+.about-img {
+    max-width: 400px;
+    border-radius: 10px;
+    margin-top: 2rem;
+}
